@@ -3311,6 +3311,8 @@ namespace Thetis
             get { return _maintain_background_aspectratio; }
             set { _maintain_background_aspectratio = value; }
         }
+        private static bool _valid_fps_profile = false;
+        private static double _last_valid_check = double.MinValue;
         public static void RenderDX2D()
         {
             try
@@ -3619,27 +3621,7 @@ namespace Thetis
                     calcFps();
                     if (m_bShowFPS)
                     {
-                        if (_runningFPSProfile)
-                        {
-                            RoundedRectangle rr = new RoundedRectangle();
-                            rr.Rect = new RectangleF(20, 20, 260, 156);
-                            rr.RadiusX = 14f;
-                            rr.RadiusY = 14f;
-                            _d2dRenderTarget.FillRoundedRectangle(rr, m_bDX2_m_bHightlightNumberScale);
-                            _d2dRenderTarget.DrawRoundedRectangle(rr, m_bDX2_Yellow);
-
-                            SharpDX.RectangleF clipRect = new SharpDX.RectangleF(21, 21, 248, 154);
-                            _d2dRenderTarget.PushAxisAlignedClip(clipRect, AntialiasMode.Aliased);
-
-                            _d2dRenderTarget.DrawText($"{m_nFps}", fontDX2d_fps_profile, new RectangleF(50, 20, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
-                            _d2dRenderTarget.DrawText($"{_cpu}", fontDX2d_callout, new RectangleF(30, 104, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
-                            _d2dRenderTarget.DrawText($"{_gpus}", fontDX2d_callout, new RectangleF(30, 118, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
-                            _d2dRenderTarget.DrawText($"Available Physical Ram : {_ram}", fontDX2d_callout, new RectangleF(30, 132, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
-                            _d2dRenderTarget.DrawText($"Installed Ram : {_installed_ram}", fontDX2d_callout, new RectangleF(30, 146, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
-
-                            _d2dRenderTarget.PopAxisAlignedClip();
-                        }
-
+                        if (_runningFPSProfile) showFPSProfile();
                         _d2dRenderTarget.DrawText(m_nFps.ToString(), fontDX2d_callout, new RectangleF(10, 0, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_m_bTextCallOutActive, DrawTextOptions.None);
                     }
 
@@ -3696,6 +3678,37 @@ namespace Thetis
                 ShutdownDX2D();
                 MessageBox.Show("Problem in DirectX Renderer !" + System.Environment.NewLine + System.Environment.NewLine + "[ " + e.ToString() + " ]", "Thetis DirectX", MessageBoxButtons.OK, MessageBoxIcon.Exclamation, MessageBoxDefaultButton.Button1, Common.MB_TOPMOST);
             }
+        }
+        private static void showFPSProfile()
+        {
+            RoundedRectangle rr = new RoundedRectangle();
+            rr.Rect = new RectangleF(20, 20, 260, 156);
+            rr.RadiusX = 14f;
+            rr.RadiusY = 14f;
+            _d2dRenderTarget.FillRoundedRectangle(rr, m_bDX2_m_bHightlightNumberScale);
+            _d2dRenderTarget.DrawRoundedRectangle(rr, m_bDX2_Yellow);
+
+            SharpDX.RectangleF clipRect = new SharpDX.RectangleF(21, 21, 248, 154);
+            _d2dRenderTarget.PushAxisAlignedClip(clipRect, AntialiasMode.Aliased);
+
+            if (m_objFrameStartTimer.ElapsedMsec - _last_valid_check >= 5000)
+            {
+                //recheck every 5 seconds
+                _valid_fps_profile = !console.IsSetupFormNull ? console.SetupForm.ValidFpsProfile() : false;
+                _last_valid_check = m_objFrameStartTimer.ElapsedMsec;
+            }
+
+            if (_valid_fps_profile)
+                _d2dRenderTarget.DrawText($"{m_nFps}", fontDX2d_fps_profile, new RectangleF(50, 20, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
+            else
+                _d2dRenderTarget.DrawText("Settings are different to expected.\nInvalid fps profile !\n\nPlease stop & restart.", fontDX2d_callout, new RectangleF(50, 40, float.PositiveInfinity, float.PositiveInfinity), _valid_fps_profile ? m_bDX2_Yellow : m_bDX2_Red, DrawTextOptions.None);
+
+            _d2dRenderTarget.DrawText($"{_cpu}", fontDX2d_callout, new RectangleF(30, 104, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
+            _d2dRenderTarget.DrawText($"{_gpus}", fontDX2d_callout, new RectangleF(30, 118, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
+            _d2dRenderTarget.DrawText($"Available Physical Ram : {_ram}", fontDX2d_callout, new RectangleF(30, 132, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
+            _d2dRenderTarget.DrawText($"Installed Ram : {_installed_ram}", fontDX2d_callout, new RectangleF(30, 146, float.PositiveInfinity, float.PositiveInfinity), m_bDX2_Yellow, DrawTextOptions.None);
+
+            _d2dRenderTarget.PopAxisAlignedClip();
         }
 
         private static int m_nVBlanks = 0;
